--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gunicorn==20.1.0
 numpy== 1.21.1
 pandas==1.3.5
 tensorflow==2.7.0
+keras==2.6.0
 scikit-learn==0.24.2
 urllib3<2.0
 google-auth>=2.22.0
